--- a/Cargo.toml
+++ b/Cargo.toml
@@ -74,20 +74,24 @@ unexpected_cfgs = { level = "warn", check-cfg = [
     # Armv6 binaries compiled with this cfg may cause problems when run on Armv7+ chips:
     # https://github.com/rust-lang/rust/issues/60605
     'cfg(atomic_maybe_uninit_use_cp15_barrier)',
-    # x86: Assume CPU does not have CMPXCHG8B instruction.
-    # This is a cfg for compatibility with 80486/80386, but
-    # note that LLVM does not support those CPUs well:
-    # https://reviews.llvm.org/D18802
-    # This cannot be supported by automatic detection in the build script,
-    # since rustc does not have a target feature to indicate this, and targets
-    # beginning with i386- may actually be i686 (e.g., i386-apple-ios)
+    # These cfgs are auto-detected for known builtin targets and -C target-cpu
+    # by the build script, but need to be set manually, for example if the CPU
+    # is specified in a custom target, since rustc does not have target
+    # features to indicate them, and target name beginning with i386- may
+    # actually be i686 (e.g., i386-apple-ios)
     # https://github.com/rust-lang/rust/blob/1.84.0/compiler/rustc_target/src/spec/base/apple/mod.rs#L65
+    # x86: Assume CPU does not have CMPXCHG8B instruction.
+    # This is a cfg for compatibility with 80486/80386, but note that
+    # LLVM does not support those CPUs well: https://reviews.llvm.org/D18802
     'cfg(atomic_maybe_uninit_no_cmpxchg8b)',
     # x86: Assume CPU does not have CMPXCHG instruction.
-    # This is a cfg for compatibility with 80386.
+    # This is a cfg for compatibility with 80386, but note that
+    # LLVM does not support those CPUs well: https://reviews.llvm.org/D18802
     # When setting this cfg you also need to set atomic_maybe_uninit_no_cmpxchg8b.
-    # See atomic_maybe_uninit_no_cmpxchg8b for details.
     'cfg(atomic_maybe_uninit_no_cmpxchg)',
+    # mips: Assume CPU does not have SYNC instruction.
+    # This is a cfg for compatibility with MIPS I.
+    'cfg(atomic_maybe_uninit_no_sync)',
 ] }
 unnameable_types = "warn"
 unreachable_pub = "warn"
