--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -778,11 +778,13 @@ jobs:
                 | tar xjf - --strip-components 1 -C "${HOME}"/msp430-gcc
               printf '%s\n' "${HOME}"/msp430-gcc/bin >>"${GITHUB_PATH}"
               # https://download.gaisler.com/anonftp/bcc2/bin/
-              retry curl --proto '=https' --tlsv1.2 -fsSL --retry 10 --retry-connrefused https://download.gaisler.com/anonftp/bcc2/bin/bcc-2.3.1-gcc-sparc-linux64.tar.xz \
+              bcc_version=2.3.1
+              retry curl --proto '=https' --tlsv1.2 -fsSL --retry 10 --retry-connrefused "https://download.gaisler.com/anonftp/bcc2/bin/bcc-${bcc_version}-gcc-sparc-linux64.tar.xz" \
                 | tar xJf - --strip-components 1 -C "${HOME}"/sparc-bcc-gcc
               printf '%s\n' "${HOME}"/sparc-bcc-gcc/bin >>"${GITHUB_PATH}"
               # https://www.gaisler.com/products/tsim3
-              retry curl --proto '=https' --tlsv1.2 -fsSL --retry 10 --retry-connrefused https://download.gaisler.com/products/TSIM3/bin/tsim-eval/tsim-eval-3.1.11.tar.gz \
+              tsim3_version=3.1.12
+              retry curl --proto '=https' --tlsv1.2 -fsSL --retry 10 --retry-connrefused "https://download.gaisler.com/products/TSIM3/bin/tsim-eval/tsim-eval-${tsim3_version}.tar.gz" \
                 | tar xzf - --strip-components 1 -C "${HOME}"/tsim
               printf '%s\n' "${HOME}"/tsim/tsim/linux-x64 >>"${GITHUB_PATH}"
             fi
