--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -205,8 +205,9 @@ jobs:
           #   target: arm-unknown-linux-gnueabi
           # - rust: '1.86' # LLVM 19
           #   target: arm-unknown-linux-gnueabi
-          - rust: stable
-            target: arm-unknown-linux-gnueabi
+          # TODO: SIGILL on QEMU with LLVM 20
+          # - rust: stable
+          #   target: arm-unknown-linux-gnueabi
           # - rust: beta
           #   target: arm-unknown-linux-gnueabi
           - rust: nightly-2025-02-17 # TODO: SIGILL on QEMU with LLVM 20
@@ -221,8 +222,9 @@ jobs:
           #   target: armv7-unknown-linux-gnueabi
           # - rust: '1.86' # LLVM 19
           #   target: armv7-unknown-linux-gnueabi
-          - rust: stable
-            target: armv7-unknown-linux-gnueabi
+          # TODO: SIGILL on QEMU with LLVM 20
+          # - rust: stable
+          #   target: armv7-unknown-linux-gnueabi
           # - rust: beta
           #   target: armv7-unknown-linux-gnueabi
           - rust: nightly-2025-02-17 # TODO: SIGILL on QEMU with LLVM 20
@@ -805,10 +807,11 @@ jobs:
       - run: tools/no-std.sh
       - run: tools/build.sh +esp xtensa-esp32-none-elf xtensa-esp32s2-none-elf xtensa-esp32s3-none-elf
         if: matrix.rust == 'stable'
-      - run: tools/build.sh +esp xtensa-esp32-none-elf xtensa-esp32s2-none-elf xtensa-esp32s3-none-elf
-        env:
-          TESTS: 1
-        if: matrix.rust == 'stable'
+      # TODO: exit with 1 without message
+      # - run: tools/build.sh +esp xtensa-esp32-none-elf xtensa-esp32s2-none-elf xtensa-esp32s3-none-elf
+      #   env:
+      #     TESTS: 1
+      #   if: matrix.rust == 'stable'
       - run: tools/no-std.sh +esp xtensa-esp32-none-elf xtensa-esp32s2-none-elf xtensa-esp32s3-none-elf
         if: matrix.rust == 'stable'
 
