--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -169,16 +169,16 @@ jobs:
           - rust: '1.84' # LLVM 19 (inline asm for arm64ec has been stabilized in Rust 1.84)
             target: arm64ec-pc-windows-msvc
             os: windows-11-arm
-          # TODO: unresolved external symbol #_ZN3std9panicking11EMPTY_PANIC17hb008ef2959a80005E (EC Symbol)␍
+          # TODO: Fixed in Rust 1.90 https://github.com/rust-lang/rust/pull/143387
           # - rust: stable
           #   target: arm64ec-pc-windows-msvc
           #   os: windows-11-arm
           # - rust: beta
           #   target: arm64ec-pc-windows-msvc
           #   os: windows-11-arm
-          # - rust: nightly
-          #   target: arm64ec-pc-windows-msvc
-          #   os: windows-11-arm
+          - rust: nightly
+            target: arm64ec-pc-windows-msvc
+            os: windows-11-arm
           # ------------------------------------------------------------
           # armv5te-unknown-linux-gnueabi
           - rust: '1.59' # LLVM 13
