--- a/Cargo.toml
+++ b/Cargo.toml
@@ -74,8 +74,8 @@ unexpected_cfgs = { level = "warn", check-cfg = [
     # https://github.com/rust-lang/rust/issues/60605
     'cfg(atomic_maybe_uninit_use_cp15_barrier)',
     # These cfgs are auto-detected for known builtin targets and -C target-cpu
-    # by the build script, but need to be set manually, for example if the CPU
-    # is specified in a custom target, since rustc does not have target
+    # by the build script, but may need to be set manually, for example if the
+    # CPU is specified in a custom target, since rustc does not have target
     # features to indicate them, and target name beginning with i386- may
     # actually be i686 (e.g., i386-apple-ios)
     # https://github.com/rust-lang/rust/blob/1.84.0/compiler/rustc_target/src/spec/base/apple/mod.rs#L65
