--- a/target-specs/armebv7-unknown-linux-gnueabi.json
+++ b/target-specs/armebv7-unknown-linux-gnueabi.json
@@ -18,5 +18,5 @@
   "target-endian": "big",
   "target-family": ["unix"],
   "target-mcount": "\u0001__gnu_mcount_nc",
-  "target-pointer-width": "32"
+  "target-pointer-width": 32
 }
