--- a/target-specs/riscv32gc-unknown-none-elf.json
+++ b/target-specs/riscv32gc-unknown-none-elf.json
@@ -12,5 +12,5 @@
   "max-atomic-width": 32,
   "panic-strategy": "abort",
   "relocation-model": "static",
-  "target-pointer-width": "32"
+  "target-pointer-width": 32
 }
