--- a/target-specs/riscv64i-unknown-none-elf.json
+++ b/target-specs/riscv64i-unknown-none-elf.json
@@ -13,5 +13,5 @@
   "max-atomic-width": 0,
   "panic-strategy": "abort",
   "relocation-model": "static",
-  "target-pointer-width": "64"
+  "target-pointer-width": 64
 }
